// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#000000",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#010100",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#32442e",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#4c5d54",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#6c6e55",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#857c56",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#838c80",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#8298a4",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#8ea3ae",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#9aacb6",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#020201",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#463f2c",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#62583d",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#776b4b",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#887b55",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#97885e",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#a49467",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#b09e6e",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#bba875",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#010101",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#2d4622",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#456043",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#55735a",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#63836d",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#6f907d",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#799d8c",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#83a799",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#8cb2a5",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#010101",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#434023",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#515e2e",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#5b7436",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#698446",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#799159",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#879c6a",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#93a679",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#9eb087",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#040101",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#6e291a",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#9a3a24",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#ba462c",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#c25f34",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#c3763b",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#c38a40",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#c39945",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#c9a557",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#010201",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#454022",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#625934",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#746c4b",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#837c5e",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#908a6f",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#9b957d",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#a5a08b",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#afaa97",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#010101",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#30452a",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#446128",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#5a7442",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#6b8355",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#7b8f67",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#889b76",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#95a585",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#a0ae91",
        },
      ],
    },
  ],
  "terminal": [
    "#1e1d0e",
    "#872111",
    "#2a421e",
    "#85794e",
    "#1c2f0d",
    "#5e552e",
    "#52625d",
    "#c39599",
    "#8299a5",
    "#c2492e",
    "#5f7c39",
    "#c3b07a",
    "#3f5d22",
    "#c39b45",
    "#8eb4a8",
    "#d3d9d0",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#000000",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#030201",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#4b3d2d",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#585a54",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#6b6d64",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#7d7c6c",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#8d8973",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#c78287",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#cd9094",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#d29c9f",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#020201",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#3e4038",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#575a52",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#696d64",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#797d74",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#868a81",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#91968d",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#9ca297",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#a5aba1",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#010101",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#3f412e",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#595b48",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#6c6d5a",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#7c7d6b",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#8a8a7a",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#959688",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#a0a093",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#aaaa9f",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#040101",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#752029",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#a42d39",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#c33947",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#b86366",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#b27b78",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#ad8e87",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#a99e93",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#a5ac9d",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#040101",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#7b1a20",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#6b553a",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#7c6951",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#8a7963",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#968773",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#a19381",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#ab9e8e",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#b4a89a",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#030201",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#3f4036",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#555b53",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#666e69",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#747e7b",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#7f8c89",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#899897",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#93a3a3",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#9facac",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#040201",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#43402c",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#595b48",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#6c6e5d",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#7b7d6e",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#898a7d",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#95968a",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#9fa196",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#aaaaa1",
        },
      ],
    },
  ],
  "terminal": [
    "#0b0c05",
    "#432d18",
    "#4a4c38",
    "#747562",
    "#2e1e0b",
    "#8e1e25",
    "#5c615e",
    "#c2777c",
    "#8f8b74",
    "#c07942",
    "#a3b4a3",
    "#a6ac74",
    "#2d3935",
    "#c43644",
    "#8f9f9f",
    "#c5ccc1",
  ],
}
`;
